# hetu

./: .gitignore  .npmrc  CLAUDE.md  README.md  ROADMAP.md  TASK_TRACKING.md  angular.json  dev-app-update.yml  electron-builder.json  electron.vite.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  tsconfig.json  turbo.json  vite-angular-plugin.js  vite.tauri.config.mjs  vitest.angular.config.js  vitest.angular.config.mjs  vitest.config.js
.claude/: settings.local.json
.github/workflows/: deploy-site.yml  release.yml
app/: main.js
apps/desktop/: electron.vite.config.mjs  package.json  tsconfig.spec.json  vite.tauri.config.mjs  vitest.angular.config.mjs
apps/desktop/src-tauri/: Cargo.toml
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs  repo_history.rs  secure.rs  settings_store.rs  state.rs
apps/desktop/src-tauri/src/commands/: auto_fetch.rs  credentials.rs  mod.rs  repo_browse.rs  repo_close.rs  repo_file.rs  repo_remote.rs  repo_reset.rs  repo_stage.rs  repo_stash.rs  repo_status.rs  repo_tag.rs  secure.rs  settings.rs
apps/desktop/src-tauri/src/git/: commit.rs  diff.rs  mod.rs  remote.rs  status.rs  tag.rs
apps/desktop/src-tauri/tests/: git_tests.rs
docs/: ROADMAP.md  tauri.md
docs/rfc/: 0001-wasm-git-migration.md  0002-standalone-frontend-build.md  0003-desktop-adapter.md  0004-service-migration.md  0006-tauri-git-wiring.md  0008-jira-ci-migration.md  (+9 more)
site/: astro.config.mjs  package-lock.json  package.json
src/: index.html  main.ts  typings.d.ts
src-tauri/: tauri.conf.json
(+418 files in other folders)
