[package]
name = "hetu"
version = "0.5.0"
description = "Hetu - subway-map style Git client"
authors = ["Michael Lu <michaellu@rhodiumcode.com>"]
license = "SEE LICENSE IN LICENSE"
repository = "https://github.com/systembugtj/hetu.git"
edition = "2021"
rust-version = "1.70"

[lib]
name = "hetu_lib"
path = "src/lib.rs"

[[bin]]
name = "hetu"
path = "src/main.rs"

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
git2 = "0.19"
parking_lot = "0.12"
keyring = { version = "3", features = ["apple-native", "windows-native", "sync-secret-service"] }
dirs = "6"
reqwest = { version = "0.12", features = ["json", "blocking"] }
base64 = "0.22"

[dev-dependencies]
tempfile = "3"

[build-dependencies]
tauri-build = { version = "2", features = [] }
